fix follower misalignment by setting top and left to 0

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,13 +26,17 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-.cursor-follower {
-  height: 4vw;
-  width: 4vw;
-  position: fixed;
-  border: 2px solid #e32636;
-  border-radius: 50%;
-  pointer-events: none;
-  overflow: hidden;
-  transform: translate3d(0, 0, 0);
+@layer components {
+  .cursor-follower {
+    height: 4vw;
+    width: 4vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    border: 2px solid #e32636;
+    border-radius: 50%;
+    pointer-events: none;
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);
+  }
 }
